--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   firebase_auth: ^6.0.0
   firebase_messaging: ^16.0.4
+  firebase_crashlytics: ^5.0.5
 
 dev_dependencies:
   flutter_test:
