--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^6.0.0
   firebase_messaging: ^16.0.4
   firebase_crashlytics: ^5.0.5
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
